--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,3 +1,6 @@
-<h1>
-  {{title}}
-</h1>
+<div class="col-xs-2">
+  <app-nav></app-nav>
+</div>
+<div class="col-xs-10">
+  <router-outlet></router-outlet>
+</div>
