added color screen

--- a/src/app/nav/nav.component.less
+++ b/src/app/nav/nav.component.less
@@ -1,8 +1,14 @@
 nav{
+  width: 55px;
   ul{
     padding: 0;
     li{
       list-style-type: none;
+      cursor: pointer;
+      margin-bottom: 10px;
+      img{
+        height: 35px;
+      }
     }
   }
 
