--- a/src/app/nav/nav.component.html
+++ b/src/app/nav/nav.component.html
@@ -1,6 +1,6 @@
 <nav>
   <ul class="padding-0">
-    <li class="text-center">
+    <li [routerLink]="['/doors']" class="text-center">
       <img src="/assets/images/left-nav/home-O.png" alt="">
     </li>
     <li class="text-center current">
@@ -12,7 +12,7 @@
     <li class="text-center">
       <img src="/assets/images/left-nav/camera-w.png" alt="">
     </li>
-    <li class="text-center">
+    <li [routerLink]="['/color']" class="text-center">
       <img src="/assets/images/left-nav/design-w.png" alt="">
     </li>
     <li class="text-center">
