fetching data by Id using route parameters

--- a/src/app/color/color.component.html
+++ b/src/app/color/color.component.html
@@ -1,9 +1,7 @@
-<p>
-  color works!
-</p>
-
 <ul>
   <li *ngFor="let user of users">
-    {{user.name}}
+    <a [routerLink]="['/writer', user.id]"> {{user.name}}</a>
   </li>
 </ul>
+
+
