Added Category Screen

--- a/src/app/zip-results/zip-results.component.html
+++ b/src/app/zip-results/zip-results.component.html
@@ -5,7 +5,7 @@
         <img src="../../assets/images/close.png" alt="">
     </span>
 <h5 class="text-orange roboto-regular margin-b-15 store-heading bold font-size-16">Please select the store you would like to shop with</h5>
-<div class="tile search-results-tile margin-b-10 ptn-rel">
+<div class="tile search-results-tile margin-b-10 ptn-rel" routerLink="/category">
   <img src="../../assets/images/Forward.png" height="30" class="pull-right valign-middle right-10" alt="">
   <span>Mandalay Bay</span>
   <span>2017 Home Depot Walk Way</span>
@@ -13,7 +13,7 @@
   <span>Phone: 1-800-WINNING</span>
   <span>Distance: You are here</span>
 </div>
-<div class="tile search-results-tile margin-b-10 ptn-rel">
+<div class="tile search-results-tile margin-b-10 ptn-rel" routerLink="/category">
   <img src="../../assets/images/Forward.png" height="30" class="pull-right valign-middle right-10" alt="">
   <span>Golden Nugget</span>
   <span>1946 Fremont Street</span>
@@ -21,7 +21,7 @@
   <span>Phone: 1-800-CHEAPSTEAK</span>
   <span>Distance: $30 cab ride</span>
 </div>
-<div class="tile search-results-tile margin-b-25 ptn-rel">
+<div class="tile search-results-tile margin-b-25 ptn-rel" routerLink="/category">
   <img src="../../assets/images/Forward.png" height="30" class="pull-right valign-middle right-10" alt="">
   <span>The Sahara</span>
   <span>2011 Implosion Drive</span>
