worked on header

--- a/src/app/header/header.component.html
+++ b/src/app/header/header.component.html
@@ -1,5 +1,5 @@
 <!-- Begin logo section -->
-<div class="logo-header row">
+<div class="logo-header">
   <div class="col-xs-5 logo">
     <a href="index.html"> <img src="./assets/images/clopay-logo_s.png" class="logo" alt=""></a>
   </div>
