--- a/src/app/header/header.component.less
+++ b/src/app/header/header.component.less
@@ -12,4 +12,31 @@
     }
   }
 }
+@media only screen and (min-width: 320px) {
+  .logo-header {
+    .home-depot{
+      img {
+        width: 53%;
+      }
+    }
+  }
+}
+@media only screen and (min-width: 375px) {
+  .logo-header {
+    .home-depot{
+      img {
+        width: 49%;
+      }
+    }
+  }
+}
+@media only screen and (min-width: 414px) {
+  .logo-header {
+    .home-depot{
+      img {
+        width: 41%;
+      }
+    }
+  }
+}
 
