--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -5,6 +5,6 @@
 <div class="col-xs-2" *ngIf="showNav">
   <app-nav></app-nav>
 </div>
-<div class="col-xs-12">
+<div class="col-xs-12 router-wrapper">
   <router-outlet></router-outlet>
 </div>
