zipcode header results

--- a/src/app/zip-results/zip-results.component.less
+++ b/src/app/zip-results/zip-results.component.less
@@ -16,9 +16,6 @@
 	line-height: 22px;
 	letter-spacing: 1px;
 }
-.font-size-16 {
-	font-size: 16px;
-}
 .alert_margin {
 	margin: 0 5px 0 5px;
 }
@@ -55,4 +52,16 @@
 }
 .margin-b-10 {
 	margin-bottom: 10px;
+}
+.results-text {
+	margin-top: 58px;
+}
+.ptn-abs {
+	position: absolute;
+}
+.zip-results-close {
+	img {
+		height: 30px;
+		margin-top: 50px;
+	}
 }
