--- a/src/app/zip-results/zip-results.component.html
+++ b/src/app/zip-results/zip-results.component.html
@@ -1,8 +1,8 @@
-<div style="margin-top:80px" class="roboto-regular notify_area font-size-16 text-capitalize">
+<div   class="roboto-regular notify_area font-size-16 text-capitalize results-text">
   <img src="../../assets/images/alert.png" height="20" class="pull-left alert_margin" alt="">
-  Demo for Home Depot product walk </div>
+  Demo for Home Depot product walk</div>
 <span class="ptn-abs zip-results-close">
-        <img src="../../assets/images/close.png"  alt="">
+        <img src="../../assets/images/close.png" alt="">
     </span>
 <h5 class="text-orange roboto-regular margin-b-15 store-heading bold font-size-16">Please select the store you would like to shop with</h5>
 <div class="tile search-results-tile margin-b-10 ptn-rel" routerLink="/category">
