zipcode header results css

--- a/src/app/zip-results/zip-results.component.less
+++ b/src/app/zip-results/zip-results.component.less
@@ -1,7 +1,7 @@
 @color_1: #ffffff;
 @color_2: #f96302;
 @font_family_1: Roboto-regular;
-
+@background_color_1: #f2eeee;
 .roboto-regular {
 	font-family: @font_family_1;
 }
@@ -54,14 +54,19 @@
 	margin-bottom: 10px;
 }
 .results-text {
-	margin-top: 58px;
+	margin-top: 5px;
 }
 .ptn-abs {
 	position: absolute;
 }
 .zip-results-close {
 	img {
-		height: 30px;
-		margin-top: 50px;
+		height: 30px; 
 	}
+}
+.btn-big {
+	padding: 10px 30px;
+}
+.btn-default {
+	background-color: @background_color_1;
 }
