garage door selction inage changes

--- a/src/app/category/category.component.less
+++ b/src/app/category/category.component.less
@@ -3,3 +3,12 @@
     clear: both;
   }
 }
+.category-sec {
+	margin-top: 10px;
+}
+
+.residential-door-selection {
+	height: 129px;
+	margin: -10px 0 0;
+	margin-bottom: -24px;
+}
