--- a/src/app/banner/banner.component.html
+++ b/src/app/banner/banner.component.html
@@ -30,7 +30,7 @@
           class="zip-code ptn-abs roboto-regular"
           required>
         <span *ngIf="zipCode.errors?.required && zipCode.touched" class="error">
-          Name is required
+         Zipcode is required
         </span>
         <span *ngIf="zipCode.errors?.minlength && zipCode.touched" class="error">
           Minimum of 5 characters
