--- a/src/app/category/category.component.html
+++ b/src/app/category/category.component.html
@@ -3,8 +3,8 @@
     <div class="bg-white box-shadow">
       <div class="image-sec text-center padding-t-10">
         <span class="helper"></span>
-        <img src="../../assets/images/IconResidentialdoor.png" class="margin-b-15"
-             style="height: 129px;margin:-10px 0 0" alt="">
+        <img src="../../assets/images/IconResidentialdoor.png" class="margin-b-15 residential-door-selection"
+               alt="">
       </div>
       <p class="category-type residential-garrage text-center">Residential Garage Door</p>
     </div>
@@ -15,7 +15,7 @@
     <div class="bg-white box-shadow">
       <div class="image-sec text-center padding-t-10 ptn-rel">
         <span class="helper"></span>
-        <img src="../../assets/images/coming-soon.png" class="ptn-abs category-coming-soon" alt="">
+        <!--<img src="../../assets/images/coming-soon.png" class="ptn-abs category-coming-soon" alt="">-->
         <img src="../../assets/images/IconCommercialdoor.png" class="margin-b-15 margin-r-25" alt="">
       </div>
       <p class="category-type text-center">Commercial Door</p>
@@ -26,7 +26,7 @@
   <div class="col-xs-6 padding-r-7">
     <div class="bg-white box-shadow">
       <div class="../../assets/image-sec text-center padding-t-10 ptn-rel">
-        <img src="../../assets/images/coming-soon.png" class="ptn-abs category-coming-soon" alt="">
+        <!--<img src="../../assets/images/coming-soon.png" class="ptn-abs category-coming-soon" alt="">-->
         <img src="../../assets/images/IconRepair.png" class="margin-b-15 margin-r-25"
              style="height: 90px;width: 120px;margin: 0" alt="">
       </div>
@@ -38,7 +38,7 @@
   <div class="col-xs-6 padding-l-7">
     <div class="bg-white box-shadow">
       <div class="../../assets/image-sec text-center padding-t-10 ptn-rel">
-        <img src="../../assets/images/coming-soon.png" class="ptn-abs category-coming-soon" alt="">
+        <!--<img src="../../assets/images/coming-soon.png" class="ptn-abs category-coming-soon" alt="">-->
         <img src="../../assets/images/IconGDO.png" class="margin-b-15 margin-r-25"
              style="height: 90px;width: 130px;margin: 0" alt="" width="80">
       </div>
