--- a/src/app/trending-now/trending-now.component.html
+++ b/src/app/trending-now/trending-now.component.html
@@ -1,3 +1,7 @@
+
+<h5 class="text-orange roboto-medium font-size-16">
+  <img src="../../assets/images/trending_1.png" class="trending-now">Trending Now
+</h5>
 <div class="trending">
   <div class="col-xs-6">
     <div class="tile">
