added media queries for residential icon

--- a/src/app/category/category.component.html
+++ b/src/app/category/category.component.html
@@ -3,7 +3,7 @@
     <div class="bg-white box-shadow">
       <div class="image-sec text-center padding-t-10">
         <span class="helper"></span>
-        <img src="../../assets/images/IconResidentialdoor.png" class="margin-b-15 residential-door-selection"
+        <img src="../../assets/images/IconResidentialdoor.png" class="margin-b-15 residential-garrage-icon"
                alt="">
       </div>
       <p class="category-type residential-garrage text-center">Residential Garage Door</p>
@@ -27,8 +27,8 @@
     <div class="bg-white box-shadow">
       <div class="../../assets/image-sec text-center padding-t-10 ptn-rel">
         <!--<img src="../../assets/images/coming-soon.png" class="ptn-abs category-coming-soon" alt="">-->
-        <img src="../../assets/images/IconRepair.png" class="margin-b-15 margin-r-25"
-             style="height: 90px;width: 120px;margin: 0" alt="">
+        <img src="../../assets/images/IconRepair.png" class="margin-b-15 margin-r-25 service-repair-icon" 
+              alt="">
       </div>
       <p class="category-type text-center">Service and Repair</p>
     </div>
@@ -39,8 +39,8 @@
     <div class="bg-white box-shadow">
       <div class="../../assets/image-sec text-center padding-t-10 ptn-rel">
         <!--<img src="../../assets/images/coming-soon.png" class="ptn-abs category-coming-soon" alt="">-->
-        <img src="../../assets/images/IconGDO.png" class="margin-b-15 margin-r-25"
-             style="height: 90px;width: 130px;margin: 0" alt="" width="80">
+        <img src="../../assets/images/IconGDO.png" class="margin-b-15 margin-r-25 garage-opener-icon"
+            alt="" width="80">
       </div>
       <p class="category-type text-center">Garage Door Opener</p>
     </div>
