--- a/src/app/category/category.component.less
+++ b/src/app/category/category.component.less
@@ -7,8 +7,18 @@
 	margin-top: 10px;
 }
 
-.residential-door-selection {
+.residential-garrage-icon {
 	height: 129px;
 	margin: -10px 0 0;
 	margin-bottom: -24px;
+}
+.service-repair-icon {
+	height: 90px;
+	width: 120px;
+	margin: 0;
+}
+.garage-opener-icon {
+	height: 90px;
+	width: 130px;
+	margin: 0;
 }
