--- a/src/app/media-queries.less
+++ b/src/app/media-queries.less
@@ -5,3 +5,15 @@
    }
   }
 }
+@media only screen and (min-width: 640px) {
+	.logo-header {
+		.home-depot {
+			img {
+				width: 26% !important;
+			}
+		}
+	}
+        .residential-garrage-icon {
+	height: 113px !important;	 
+}
+}
