--- a/src/app/banner/banner.component.html
+++ b/src/app/banner/banner.component.html
@@ -41,7 +41,7 @@
 
       </div>
       <div class="col-xs-2 padding-l-3">
-        <button class="btn btn-sm btn-warning" routerLink="/zipResults" (click)="addressList()" [disabled]="form.invalid" type="submit">GO</button>
+        <button class="btn btn-sm border-white text-white show-zip-results go-btn disabled" routerLink="/zipResults" (click)="addressList()" [disabled]="form.invalid" type="submit">GO</button>
       </div>
     </form>
   </div>
