--- a/src/app/media-queries.less
+++ b/src/app/media-queries.less
@@ -5,3 +5,30 @@
    }
   }
 }
+@media only screen and (min-width: 320px) {
+	.logo-header {
+		.home-depot {
+			img {
+			 width: 53% !important;
+			}
+		}
+	}
+}
+@media only screen and (min-width: 414px) {
+	.logo-header {
+		.home-depot {
+			img  {
+				width: 29% !important;
+			}
+		}
+	}
+}
+@media only screen and (min-width: 640px) {
+	.logo-header {
+		.home-depot {
+			img {
+				width: 29% !important;
+			}
+		}
+	}
+}
