header media query

--- a/src/app/media-queries.less
+++ b/src/app/media-queries.less
@@ -9,7 +9,16 @@
 	.logo-header {
 		.home-depot {
 			img {
-			 width: 53% !important;
+			 width: 58% !important;
+			}
+		}
+	}
+}
+@media only screen and (min-width: 412px) {
+	.logo-header {
+		.home-depot {
+			img  {
+				width: 46% !important;
 			}
 		}
 	}
@@ -19,6 +28,15 @@
 		.home-depot {
 			img  {
 				width: 45% !important;
+			}
+		}
+	}
+}
+@media only screen and (min-width: 568px) {
+	.logo-header {
+		.home-depot {
+			img  {
+				width: 34% !important;
 			}
 		}
 	}
