added routing for logo

--- a/src/app/header/header.component.html
+++ b/src/app/header/header.component.html
@@ -1,7 +1,7 @@
 <!-- Begin logo section -->
 <div class="logo-header">
   <div class="col-xs-5 logo">
-    <a href="index.html"> <img src="./assets/images/clopay-logo_s.png" class="logo" alt=""></a>
+    <a routerLink="/banner"> <img src="./assets/images/clopay-logo_s.png" class="logo" alt=""></a>
   </div>
   <div class="col-xs-3 home-depot pull-right">
     <img src="./assets/images/TheHomeDepot.png" alt="" class="pull-right">
