--- a/src/app/category/category.component.html
+++ b/src/app/category/category.component.html
@@ -11,17 +11,17 @@
 
   </div>
 
-  <div class="col-xs-6 padding-l-7">
+<!--  <div class="col-xs-6 padding-l-7">
     <div class="bg-white box-shadow">
       <div class="image-sec text-center padding-t-10 ptn-rel">
         <span class="helper"></span>
-        <!--<img src="../../assets/images/coming-soon.png" class="ptn-abs category-coming-soon" alt="">-->
+      <img src="../../assets/images/coming-soon.png" class="ptn-abs category-coming-soon" alt=""> 
         <img src="../../assets/images/IconCommercialdoor.png" class="margin-b-15 margin-r-25" alt="">
       </div>
       <p class="category-type text-center">Commercial Door</p>
     </div>
 
-  </div>
+  </div>-->
 
   <div class="col-xs-6 padding-r-7">
     <div class="bg-white box-shadow">
