--- a/src/app/category/category.component.html
+++ b/src/app/category/category.component.html
@@ -4,31 +4,19 @@
       <div class="image-sec text-center padding-t-10">
         <span class="helper"></span>
         <img src="../../assets/images/IconResidentialdoor.png" class="margin-b-15 residential-garrage-icon"
-               alt="">
+             alt="">
       </div>
       <p class="category-type residential-garrage text-center">Residential Garage Door</p>
     </div>
 
   </div>
 
-  <div class="col-xs-6 padding-l-7">
-    <div class="bg-white box-shadow">
-      <div class="image-sec text-center padding-t-10 ptn-rel">
-        <span class="helper"></span>
-        <!--<img src="../../assets/images/coming-soon.png" class="ptn-abs category-coming-soon" alt="">-->
-        <img src="../../assets/images/IconCommercialdoor.png" class="margin-b-15 margin-r-25" alt="">
-      </div>
-      <p class="category-type text-center">Commercial Door</p>
-    </div>
-
-  </div>
-
-  <div class="col-xs-6 padding-r-7" (click)="openPopup()">
+  <div class="col-xs-6 padding-r-7" (click)="showModal()">
     <div class="bg-white box-shadow">
       <div class="../../assets/image-sec text-center padding-t-10 ptn-rel">
         <!--<img src="../../assets/images/coming-soon.png" class="ptn-abs category-coming-soon" alt="">-->
-        <img src="../../assets/images/IconRepair.png" class="margin-b-15 margin-r-25 service-repair-icon" 
-              alt="">
+        <img src="../../assets/images/IconRepair.png" class="margin-b-15 margin-r-25 service-repair-icon"
+             alt="">
       </div>
       <p class="category-type text-center">Service and Repair</p>
     </div>
@@ -40,7 +28,7 @@
       <div class="../../assets/image-sec text-center padding-t-10 ptn-rel">
         <!--<img src="../../assets/images/coming-soon.png" class="ptn-abs category-coming-soon" alt="">-->
         <img src="../../assets/images/IconGDO.png" class="margin-b-15 margin-r-25 garage-opener-icon"
-            alt="" width="80">
+             alt="" width="80">
       </div>
       <p class="category-type text-center">Garage Door Opener</p>
     </div>
@@ -49,7 +37,29 @@
 </div>
 <app-trending-now></app-trending-now>
 
+<!--<div>-->
+  <!--<popup #popup1>-->
+    <!--<p>You will now be directed to The Home Depot's Service and Repair site. From this site, you-->
+      <!--can request a call from a service technician to assist you in service or repair.-->
+    <!--</p>-->
 
-<popup #popup1>
-  Add your custom html elements here
-</popup>
+    <!--<div>-->
+      <!--<button class="btn btn-default margin-b-10" (click)="serviceRepair()">Proceed to Service and Repair Site</button>-->
+      <!--<button class="btn btn-default" (click)="cancel()">Stay on Current site</button>-->
+    <!--</div>-->
+  <!--</popup>-->
+<!--</div>-->
+
+<modal #modal>
+
+  <modal-body>
+    <p>You will now be directed to The Home Depot's Service and Repair site. From this site, you
+    can request a call from a service technician to assist you in service or repair.
+    </p>
+
+    <div>
+    <button class="btn btn-default margin-b-10" (click)="serviceRepair()">Proceed</button>
+    <button class="btn btn-default" (click)="modal.close()">Stay on Current site</button>
+    </div>
+  </modal-body>
+</modal>
