--- a/src/app/category/category.component.less
+++ b/src/app/category/category.component.less
@@ -22,3 +22,11 @@
 	width: 130px;
 	margin: 0;
 }
+#ng2-opd-popup-main {
+  .ng2-opd-popup-well {
+    display: none !important;
+  }
+  .ng2-opd-popup-content-main {
+    width: 90% !important;
+  }
+}
