--- a/src/app/media-queries.less
+++ b/src/app/media-queries.less
@@ -14,7 +14,7 @@
 			}
 		}
 	}
-        .residential-garrage-icon {
+  .residential-garrage-icon {
 	height: 113px !important;	 
 }
 @media only screen and (min-width: 320px) {
@@ -35,11 +35,11 @@
 		}
 	}
 }
-@media only screen and (min-width: 414px) {
+@media only screen and (min-width: 414px) and (min-width: 667px) {
 	.logo-header {
 		.home-depot {
 			img  {
-				width: 45% !important;
+				width: 25% !important;
 			}
 		}
 	}
