--- a/src/app/header/header.component.html
+++ b/src/app/header/header.component.html
@@ -4,8 +4,10 @@
         </div>
      
         <div class="col-xs-4 pull-right padding-0">
+            
             <img src="./assets/images/TheHomeDepot.png" alt="" height="40" class="pull-right">
-             <img src="./assets/images/shopping-cart.png" alt="" height="32" class="pull-right cart-icon">
+<!--            <span class="badge ">5</span>-->
+             <img src="./assets/images/shopping-cart.png" alt="" height="30" class="pull-right cart-icon">
             
         </div>
     
