few css changes

--- a/src/app/category/category.component.html
+++ b/src/app/category/category.component.html
@@ -1,7 +1,7 @@
 <div class="category-sec clearfix">
   <div class="col-xs-6 padding-r-7 show-category">
     <div class="bg-white box-shadow">
-      <div class="image-sec text-center padding-t-10">
+      <div  class="image-sec text-center padding-t-10 category-height">
         <span class="helper"></span>
         <img src="../../assets/images/IconResidentialdoor.png" class="margin-b-15 residential-garrage-icon"
                alt="">
@@ -24,7 +24,7 @@
 
   <div class="col-xs-6 padding-r-7" (click)="openPopup()">
     <div class="bg-white box-shadow">
-      <div class="../../assets/image-sec text-center padding-t-10 ptn-rel">
+      <div   class="../../assets/image-sec text-center padding-t-10 ptn-rel category-height">
         <!--<img src="../../assets/images/coming-soon.png" class="ptn-abs category-coming-soon" alt="">-->
         <img src="../../assets/images/IconRepair.png" class="margin-b-15 margin-r-25 service-repair-icon" 
               alt="">
@@ -36,7 +36,7 @@
 
   <div class="col-xs-6 padding-l-7">
     <div class="bg-white box-shadow">
-      <div class="../../assets/image-sec text-center padding-t-10 ptn-rel">
+      <div  class="../../assets/image-sec text-center padding-t-10 ptn-rel category-height">
         <!--<img src="../../assets/images/coming-soon.png" class="ptn-abs category-coming-soon" alt="">-->
         <img src="../../assets/images/IconGDO.png" class="margin-b-15 margin-r-25 garage-opener-icon"
             alt="" width="80">
