--- a/src/app/category/category.component.less
+++ b/src/app/category/category.component.less
@@ -4,7 +4,7 @@
   }
 }
 .category-sec {
-	margin-top: 10px;
+	margin-top: 15px;
 }
 .residential-garrage-icon {
 	height: 129px;
@@ -14,10 +14,14 @@
 .service-repair-icon {
 	height: 96px;
 	width: 120px;
-	margin: 0;
+	margin: 14px;
 }
 .garage-opener-icon {
 	height: 90px;
 	width: 130px;
 	margin: 0;
+}
+.category-height {
+	height: 125.723px;
+	 
 }
