--- a/src/app/header/header.component.less
+++ b/src/app/header/header.component.less
@@ -1,53 +1,97 @@
 @import "../../main.less";
 .logo-header {
-  background-color: rgb(51, 51, 51);
-  .padding(5px,0,5px);
-  .logo{
-    .padding(0,0,0,5px);
-  }
-  .home-depot{
-    .padding(0,5px,0,0);
-    img {
-      width: 74%;
+    background-color: rgb(51, 51, 51);
+    .padding(5px,0,5px);
+    .logo{
+        .padding(0,0,0,5px);
     }
-  }
+    .home-depot{
+        .padding(0,5px,0,0);
+        img {
+            width: 74%;
+        }
+    }
 }
 @media only screen and (min-width: 320px) {
-  .logo-header {
-    .home-depot{
-      img {
-        width: 53%;
-      }
+    .logo-header {
+        .home-depot{
+            img {
+                width: 53%;
+            }
+        }
     }
-  }
 }
 @media only screen and (min-width: 375px) {
-  .logo-header {
-    .home-depot{
-      img {
-        width: 49%;
-      }
+    .logo-header {
+        .home-depot{
+            img {
+                width: 49%;
+            }
+        }
     }
-  }
 }
 @media only screen and (min-width: 414px) {
-  .logo-header {
-    .home-depot{
-      img {
-        width: 41%;
-      }
+    .logo-header {
+        .home-depot{
+            img {
+                width: 41%;
+            }
+        }
     }
-  }
 }
 .row-inner {
-	padding: 8px 8px;
+    padding: 8px 8px;
 }
 .row {
-	margin-right: -10px;
-	margin-left: -15px;
+    margin-right: -10px;
+    margin-left: -15px;
 }
 .cart-icon {
-	margin-top: 5px;
-	margin-right: 10px;
+    margin-top: 5px;
+    margin-right: 16px;
 }
+.notify-badge {
+    position: absolute;
+    right: 64px;
+    bottom: 27px;
+    background: #f96302 !important;
+    border: 1px solid white; 
+    padding-top: 1px;
+    padding-right: 3px;
+    padding-bottom: 0px;
+    padding-left: 4px;
+}
+ span.shop-count {
+
+    width: 17px;
+
+    height: 17px;
+
+    border-radius: 7px;
+
+    color: #fff;
+
+    position: relative;
+
+    background: #f96;
+
+    font-size: 12px;
+
+    display: block;
+
+    clear: both;
+
+    right: -32px;
+
+    text-align: center;
+
+    position: absolute;
+
+    top: -1px;
+
+    right: 60px;
+     background: #f96302 !important;
+    border: 1px solid white; 
+ }
+
 
