--- a/src/app/collection/collection.component.html
+++ b/src/app/collection/collection.component.html
@@ -1,4 +1,3 @@
-
 <h3 class="font-size-16 text-orange margin-t-10">Choose Your Collection</h3>
 <!-- Begin Tile 1 -->
 <div class="tile">
@@ -8,7 +7,7 @@
   <div class="collection-btn-sec">
     <img src="../../assets/images/play_g.png" alt="" height="20">
     <img src="../../assets/images/expand-g.png" height="20" class="margin-l-15" alt="">
-    <div class="btns pull-right">
+    <div class="pull-right">
       <span class="coming-soon"><button>Info</button></span>
       <button class="collection-select">Select</button>
     </div>
