home page less had been added

--- a/src/app/home/home.component.html
+++ b/src/app/home/home.component.html
@@ -74,6 +74,7 @@
         <label for="camera-r2" class="ptn-rel">
             <img src="../../assets/images/coming-soon.png" class="ptn-abs coming-soon" alt="">
             <img src="../../assets/images/camera-block.png">
+            <!--<input type="file" accept="image/*;capture=camera">-->
             <span>Camera</span>
         </label>
     </span>
