how to measure css

--- a/src/app/door-size/door-size.component.less
+++ b/src/app/door-size/door-size.component.less
@@ -28,5 +28,10 @@
     right: 5px;
     top: 5px;
 }
- 
+.measure{
+    margin-left: 40px;
+} 
+hr{
+        border-top: 2px solid #999 !important;
+}
  
