--- a/src/main.less
+++ b/src/main.less
@@ -27,6 +27,9 @@
 .pad-r-0 {
   padding-right: 0;
 }
+.padding-t-7 {
+	padding-top: 7px;
+}
 
 // modals
 .modal-open {
@@ -37,7 +40,7 @@
     margin: 0 !important;
   }
   .modal-body{
-    padding-top: 5px!important;
+    padding-top: 0px!important;
     height: 94%;
     overflow-y: scroll;
   }
@@ -109,6 +112,7 @@ img {
 .transform-rotate-90 {
   transform: rotate(90deg);
 }
+ 
 
 /* font faces */
 @font-face {
@@ -135,4 +139,8 @@ img {
   font-family: RobotoLight;
   src: url(./assets/fonts/Roboto-Light.ttf);
 }
+li {
+	list-style: disc;
+}
+
 
