--- a/src/app/door-size/door-size.component.html
+++ b/src/app/door-size/door-size.component.html
@@ -45,22 +45,25 @@
   <modal-header [show-close]="true">
   </modal-header>
   <modal-body>
-    <h4>General Size Guidelines:</h4>
+    <h4 class="bold font-size-16">General Size Guidelines:</h4>
     <ul>
       <li>Replacement-Measure existing door, or framed opening
         New Construction-Measure framed opening
       </li>
       <li> New Construction-Measure framed opening</li>
     </ul>
-    <h4>Common Sizes:</h4>
+    <h5 class="bold">Common Sizes:</h5>
     <ul>
       <li>Garage Doors are generally categorized as Single or Double doors
       </li>
-      <li>Common Single door sizes: 8' wide by 7' tall or 9'wide by 7' tall</li>
+      <li class="bold">Common Single door sizes: 8' wide by 7' tall or 9'wide by 7' tall</li>
       <li>Common Double door sizes: 16' wide by 7' tall</li>
     </ul>
-    <h4 class="text-orange text-uppercase">How To Measure</h4>
+    <h4 class="text-orange roboto-medium font-size-16 text-uppercase padding-t-7">How To Measure</h4>
+    <hr>
     <p>Please use the drawing and instructions below to measure your garage door</p>
+    
+    <img src="../../assets/images/how_to_measure-drawing.png" class="img-rounded measure" alt=" " width="304" height="236">
     <div>
       <p>Step:1</p>
       <p>Please use the drawing and instructions below to measure your garage door</p>
