details and design and config folder css

--- a/src/app/details/details.component.html
+++ b/src/app/details/details.component.html
@@ -1,13 +1,13 @@
 <div class="tile">
   <div class="design-detials--sec">
-    <div class="col-xs-6 padding-r-7 padding-l-7 border-white-right">
+    <div class="col-xs-6 padding-r-7  border-white-right font-size-12" >
       <p class="design-price">$<span id="price-876.95">876.95</span> / Installed</p>
       <p class="design-price">$<span id="price-668.95">668.95</span> / DIY</p>
       <p>
         <img src="../../assets/images/info.png" alt="" height="25">
       </p>
     </div>
-    <div class="col-xs-6 padding-0-r">
+    <div class="col-xs-6 padding-0-r  font-size-12">
       <p>
         Quantity
         <img src="../../assets/images/substract.png" alt="" height="20" class="minus-quantity">
