--- a/src/main.less
+++ b/src/main.less
@@ -139,8 +139,36 @@ img {
   font-family: RobotoLight;
   src: url(./assets/fonts/Roboto-Light.ttf);
 }
+
+.font-size-16 {
+	font-size: 16px;
+}
+.font-size-12 {
+            font-size: 12px !important;
+}
+
 li {
 	list-style: disc;
+}
+
+.choose-your-design--sec {
+	.selected-icon {
+		height: 20px;
+		right: 5px;
+		top: 5px;
+		width: 20px;
+	}
+	.selected-icon-next {
+		top: 110px;
+	}
+}
+.selected-icon {
+	height: 20px;
+	right: 5px;
+	top: 5px;
+}
+.hide {
+	display: none !important;
 }
 
 
