--- a/src/app/config/config.component.html
+++ b/src/app/config/config.component.html
@@ -1,14 +1,15 @@
 <div class="linear-bg">
   <h3 class="font-size-16 margin-t-10 visualize-header">
-    <div class="pull-right switcher-sec text-orange text-uppercase">
-      Home
+    <div class="pull-right switcher-sec text-orange text-uppercase home-image"  >
+       <span  class="switcher-text"> Home</span>
       <span class="switcher margin-b-10"></span>
             <span class="switcher-box" style="display: none; right: 88px;">
                 <img src="../../assets/images/door_icon.png" height="17">
             </span>
             <span class="switcher-box-home" style="right: 88px;">
                 <img src="../../assets/images/home_icon.png" height="17">
-            </span> Door
+            </span>  
+               <span class="switcher-text"> Door</span>
     </div>
   </h3>
   <div class="text-center switcher-image-sec" style="width: 100%;">
