--- a/src/app/config/config.component.less
+++ b/src/app/config/config.component.less
@@ -12,3 +12,60 @@
 .inner-router{
   margin-top: 195px;
 }
+.home-image {
+	height: 34px;
+}
+.switcher-text {
+	vertical-align: top;
+}
+
+.switcher-sec {
+	font-size: 10px;
+	background: rgba(255, 255, 250, 0.8);
+	padding: 10px;
+	border-radius: 20px;
+	margin-right: 20px;
+}
+.switcher-image-sec {
+	display: inline-block;
+}
+.switcher {
+	background: #f96302;
+	border-radius: 10px;
+	width: 50px;
+	height: 10px;
+	display: inline-block;
+	margin: 1px 5px 0;
+}
+.switcher-box {
+	background: #fff;
+	padding: 5px;
+	box-shadow: 0 0 3px #000;
+	border-radius: 50%;
+	position: absolute;
+	right: 68px;
+	top: 2px;
+	display: none;
+}
+.switcher-box-home {
+	background: #fff;
+	padding: 5px;
+	box-shadow: 0 0 3px #000;
+	border-radius: 50%;
+	position: absolute;
+	right: 68px;
+	top: 2px;
+}
+.switcher-image {
+	width: 46.5%;
+	margin: 10px 0 20px;
+	height: 100px;
+}
+.switcher-image.homeImage {
+	width: 100%;
+	margin-bottom: 0;
+	height: 179px;
+	margin-top: -53px;
+	position: static;
+	z-index: 3;
+}
