--- a/src/app/details/details.component.html
+++ b/src/app/details/details.component.html
@@ -1,8 +1,8 @@
 <div class="tile">
   <div class="design-detials--sec">
     <div class="col-xs-6 padding-r-7  border-white-right font-size-12" >
-      <p class="design-price">$<span id="price-876.95">876.95</span> / Installed</p>
-      <p class="design-price">$<span id="price-668.95">668.95</span> / DIY</p>
+      <p>$<span id="price-876.95">876.95</span> / Installed</p>
+      <p>$<span id="price-668.95">668.95</span> / DIY</p>
       <p>
         <img src="../../assets/images/info.png" alt="" height="25">
       </p>
@@ -10,12 +10,12 @@
     <div class="col-xs-6 padding-0-r  font-size-12">
       <p>
         Quantity
-        <img src="../../assets/images/substract.png" alt="" height="20" class="minus-quantity">
-        <span class="design-quantity--count">1</span>
-        <img src="../../assets/images/add.png" alt="" height="20" class="add-quantity">
+        <img src="../../assets/images/substract.png" alt=""   class="minus-quantity">
+        <span>1</span>
+        <img src="../../assets/images/add.png" alt=""  class="add-quantity">
       </p>
       <p class="margin-b-5">&nbsp;</p>
-      <h4 class="pull-right padding-r-7 text-orange details-btn">DETAILS</h4>
+      <h4 class="pull-right padding-r-7 text-orange">DETAILS</h4>
     </div>
   </div>
 </div>
