color page css had been added

--- a/src/main.less
+++ b/src/main.less
@@ -105,7 +105,9 @@ img {
 .margin-r-10 {
   margin-right: 10px
 }
-
+.margin-r-0 {
+    margin-right: 0 !important;
+}
 /* paddings */
 .padding10 {
 	padding: 10px;
