added class to ctock images

--- a/src/app/home/home.component.less
+++ b/src/app/home/home.component.less
@@ -11,12 +11,26 @@
         }
     }
     .stock-row {
+      
         .stock-col {
             display: inline-block;
             margin-right: 5px;
         }
     }
 }
+
+.camera-section {
+	div {
+		.stock-image {
+			
+			margin-right: 5px;
+			margin-bottom: 5px;
+			display: inline-block;
+			background-size: cover;
+		}
+	}
+}
+
 .stock-image-1 {
     background-image: url('../../assets/images/img-1.png');
 }
