--- a/src/app/home/home.component.html
+++ b/src/app/home/home.component.html
@@ -1,19 +1,19 @@
 <div class="camera-section">
   <h4 class="text-orange font-size-16">Choose your Home</h4>
-  <div class="stock-row">
-    <div class="stock-col">
+  <div class="stock-row ">
+    <div class="stock-col col-xs-4">
       <input type="radio" name="stock" id="1" checked="checked">
       <label for="1">
         <span class="glyphicon stock-image stock-image-1"></span>
       </label>
     </div>
-    <div class="stock-col">
+    <div class="stock-col col-xs-4">
       <input type="radio" name="stock" id="2">
       <label for="2">
         <span class="glyphicon stock-image stock-image-2"></span>
       </label>
     </div>
-    <div class="stock-col">
+    <div class="stock-col col-xs-4">
       <input type="radio" name="stock" id="3">
       <label for="3">
         <span class="glyphicon stock-image stock-image-3"></span>
@@ -21,19 +21,19 @@
     </div>
   </div>
   <div class="stock-row">
-    <div class="stock-col">
+    <div class="stock-col col-xs-4">
       <input type="radio" name="stock" id="stock-4" disabled="disabled">
       <label for="stock-4">
         <span class="glyphicon stock-image stock-image-4"></span>
       </label>
     </div>
-    <div class="stock-col">
+    <div class="stock-col col-xs-4">
       <input type="radio" name="stock" id="stock-5" disabled="disabled">
       <label for="stock-5">
         <span class="glyphicon stock-image stock-image-5"></span>
       </label>
     </div>
-    <div class="stock-col">
+    <div class="stock-col col-xs-4">
       <input type="radio" name="stock" id="stock-6" disabled="disabled">
       <label for="stock-6">
         <span class="glyphicon stock-image stock-image-6"></span>
@@ -41,19 +41,19 @@
     </div>
   </div>
   <div class="stock-row">
-    <div class="stock-col">
+    <div class="stock-col col-xs-4">
       <input type="radio" name="stock" id="stock-7" disabled="disabled">
       <label for="stock-7">
         <span class="glyphicon stock-image stock-image-7"></span>
       </label>
     </div>
-    <div class="stock-col">
+    <div class="stock-col col-xs-4">
       <input type="radio" name="stock" id="stock-8" disabled="disabled">
       <label for="stock-8">
         <span class="glyphicon stock-image stock-image-8"></span>
       </label>
     </div>
-    <div class="stock-col">
+    <div class="stock-col col-xs-4">
       <input type="radio" name="stock" id="stock-9" disabled="disabled">
       <label for="stock-9">
         <span class="glyphicon stock-image stock-image-9"></span>
