--- a/src/app/collection/collection.component.html
+++ b/src/app/collection/collection.component.html
@@ -72,7 +72,7 @@
     </div>
   </div>
 </div>
-<div class="text-center">
+<div class="text-center button-margin">
   <button class="btn btn-default text-uppercase btn-big box-shadow bold">TAP TO SEE QUICKSHIP DOORS</button>
 </div>
 <div class="clearfix margin-b-15 inline-block"></div>
