--- a/src/app/home/home.component.less
+++ b/src/app/home/home.component.less
@@ -11,8 +11,7 @@
         }
     }
     .stock-row {
-      
-        .stock-col {
+       .stock-col {
             display: inline-block;
             margin-right: 5px;
         }
@@ -22,7 +21,8 @@
 .camera-section {
 	div {
 		.stock-image {
-			
+			height: 85px;
+			width: 98px;
 			margin-right: 5px;
 			margin-bottom: 5px;
 			display: inline-block;
