--- a/src/app/home/home.component.html
+++ b/src/app/home/home.component.html
@@ -1,65 +1,47 @@
 <div class="camera-section">
-  <h4 class="text-orange font-size-16">Choose your Home</h4>
-  <div class="stock-row ">
-    <div class="stock-col col-xs-4">
-      <input type="radio" name="stock" id="1" checked="checked">
-      <label for="1">
-        <span class="glyphicon stock-image stock-image-1"></span>
-      </label>
+    <h4 class="text-orange font-size-16">Choose your Home</h4>
+    <div class="stock-row ">
+        <div class="stock-col col-xs-4">
+            <input type="radio" name="stock" id="1" checked="checked"> 
+            <img class="  " src="../../assets/images/stock-images/img-1.png"/> 
+        </div>
+        <div class="stock-col col-xs-4">
+            <input type="radio" name="stock" id="2"> 
+            <img class="  " src="../../assets/images/stock-images/img-2.png"/> 
+        </div>
+        <div class="stock-col col-xs-4">
+            <input type="radio" name="stock" id="3">
+            <img class="  " src="../../assets/images/stock-images/img-3.png"/> 
+        </div>
     </div>
-    <div class="stock-col col-xs-4">
-      <input type="radio" name="stock" id="2">
-      <label for="2">
-        <span class="glyphicon stock-image stock-image-2"></span>
-      </label>
+    <div class="stock-row">
+        <div class="stock-col col-xs-4">
+            <input type="radio" name="stock" id="stock-4" disabled="disabled">
+            <img class="  " src="../../assets/images/stock-images/img-4.png"/> 
+        </div>
+        <div class="stock-col col-xs-4">
+            <input type="radio" name="stock" id="stock-5" disabled="disabled">
+            <img class="  " src="../../assets/images/stock-images/img-5.png"/> 
+        </div>
+        <div class="stock-col col-xs-4">
+            <input type="radio" name="stock" id="stock-6" disabled="disabled">
+            <img class="  " src="../../assets/images/stock-images/img-6.png"/> 
+        </div>
     </div>
-    <div class="stock-col col-xs-4">
-      <input type="radio" name="stock" id="3">
-      <label for="3">
-        <span class="glyphicon stock-image stock-image-3"></span>
-      </label>
+    <div class="stock-row">
+        <div class="stock-col col-xs-4">
+            <input type="radio" name="stock" id="stock-7" disabled="disabled">
+            <img class="  " src="../../assets/images/stock-images/img-7.png"/> 
+        </div>
+        <div class="stock-col col-xs-4">
+            <input type="radio" name="stock" id="stock-8" disabled="disabled">
+            <img class="  " src="../../assets/images/stock-images/img-8.png"/> 
+        </div>
+        <div class="stock-col col-xs-4">
+            <input type="radio" name="stock" id="stock-9" disabled="disabled">
+            <img class="  " src="../../assets/images/stock-images/img-9.png"/> 
+        </div>
     </div>
-  </div>
-  <div class="stock-row">
-    <div class="stock-col col-xs-4">
-      <input type="radio" name="stock" id="stock-4" disabled="disabled">
-      <label for="stock-4">
-        <span class="glyphicon stock-image stock-image-4"></span>
-      </label>
-    </div>
-    <div class="stock-col col-xs-4">
-      <input type="radio" name="stock" id="stock-5" disabled="disabled">
-      <label for="stock-5">
-        <span class="glyphicon stock-image stock-image-5"></span>
-      </label>
-    </div>
-    <div class="stock-col col-xs-4">
-      <input type="radio" name="stock" id="stock-6" disabled="disabled">
-      <label for="stock-6">
-        <span class="glyphicon stock-image stock-image-6"></span>
-      </label>
-    </div>
-  </div>
-  <div class="stock-row">
-    <div class="stock-col col-xs-4">
-      <input type="radio" name="stock" id="stock-7" disabled="disabled">
-      <label for="stock-7">
-        <span class="glyphicon stock-image stock-image-7"></span>
-      </label>
-    </div>
-    <div class="stock-col col-xs-4">
-      <input type="radio" name="stock" id="stock-8" disabled="disabled">
-      <label for="stock-8">
-        <span class="glyphicon stock-image stock-image-8"></span>
-      </label>
-    </div>
-    <div class="stock-col col-xs-4">
-      <input type="radio" name="stock" id="stock-9" disabled="disabled">
-      <label for="stock-9">
-        <span class="glyphicon stock-image stock-image-9"></span>
-      </label>
-    </div>
-  </div>
 </div>
 <div class="camera-section-selection space-around">
     <span>
