--- a/src/app/home/home.component.less
+++ b/src/app/home/home.component.less
@@ -14,6 +14,7 @@
     .stock-col {
       display: inline-block;
       margin-right: 5px;
+      padding:0px;
     }
   }
 
@@ -31,7 +32,14 @@
     }
   }
 }
-
+   .stock-image {
+      height: 30px;
+      width: 100px;
+      margin-right: 5px;
+      margin-bottom: 5px;
+      display: inline-block;
+      background-size: cover;
+    }
 .stock-image-1 {
   background-image: url('../../assets/images/img-1.png');
 }
