color css had been added

--- a/src/main.less
+++ b/src/main.less
@@ -1,3 +1,5 @@
+
+@color_1: #fff;
 /* Mixin */
 .border-radius (@radius: 5px) {
     -webkit-border-radius: @radius;
@@ -201,9 +203,11 @@ img {
 }
 
 li {
+    list-style: none;
+}
+.list-style-disc{
     list-style: disc;
 }
-
 .choose-your-design--sec {
     .selected-icon {
         height: 20px;
@@ -223,8 +227,6 @@ li {
 .hide {
     display: none !important;
 }
-
-@color_1: #fff;
 
 .design-detials--sec {
     background: #000;
