--- a/src/app/color/color.component.less
+++ b/src/app/color/color.component.less
@@ -1,3 +1,4 @@
+@background_color_1: #f3f7f6;
 .carousel {
     position: relative;
 }
@@ -9,7 +10,15 @@
     margin-right: 3%;
     position: relative;
 }
-
+.carousel-control.left {
+    left: -7%;
+    transform: scale(-1);
+    background-image: none;
+}
+.carousel-control.right {
+    right: -7%;
+    background-image: none;
+}
 .color-carousel li.margin-right1-5 {
     margin-right: 1.5%;
 }
@@ -35,7 +44,7 @@
 }
 
 .carousel1 .carousel-control.left {
-    left: -7px;
+    left: -10px;
 }
 
 .carousel1 .carousel-control.left img {
@@ -44,7 +53,7 @@
 }
 
 .carousel1 .carousel-control.right {
-    right: -7px;
+    right: -10px;
 }
 
 .carousel1 .coming-soon {
@@ -71,29 +80,41 @@
     padding: 0 15px;
 }
 .color-carousel li.margin-left1-5 {
-  margin-left: 1.8%;
-}
- 
-.white-pannel {
-  background-color: #f3f7f6;
+    margin-left: 1.8%;
 }
 
+
+.white-pannel {
+    background-color: @background_color_1;
+}
+
+
 .almond-pannel {
-  background-color: #fdf0e1;
+    background-color: #fdf0e1;
 }
 
 .grey-pannel {
-  background-color: #c7cacb;
+    background-color: #c7cacb;
 }
 
 .desert-tan {
-  background-color: #d9cbb3;
+    background-color: #d9cbb3;
 }
 
 .sandStone {
-  background-color: #d9cbb3;
+    background-color: #d9cbb3;
 }
 
 .hunterGreen {
-  background-color: #064e3b;
+    background-color: #064e3b;
+}
+.helper {
+	height: 100%;
+	vertical-align: middle;
+}
+.left-arrow {
+	height: 30px;
+}
+.right-arrow {
+	height: 30px;
 }
