--- a/src/app/top-section/top-section.component.html
+++ b/src/app/top-section/top-section.component.html
@@ -2,7 +2,6 @@
 <div class="tile margin-b-15 ptn-rel">
   <div id="topSectionCarousel" class="carousel slide padding10 top-section-carousel carousel1"
        data-ride="carousel">
-
     <!-- Wrapper for slides -->
     <div role="listbox" class="carousel-inner">
       <div class="item active">
@@ -32,24 +31,20 @@
         </div>
         <div>
                     <span class="ptn-rel pull-left">
-                        <img src="../../assets/images/coming-soon.png" class="ptn-abs coming-soon" alt="">
                         <img src="../../assets/images/top-3.png" alt="" class="">
                         <span>Plain Long</span>
                     </span>
                     <span class="pull-right margin-r-0 ptn-rel">
-                        <img src="../../assets/images/coming-soon.png" class="ptn-abs coming-soon" alt="">
                         <img src="../../assets/images/top-4.png" alt="" class="">
                         <span>Cathedral 507</span>
                     </span>
         </div>
         <div>
                     <span class="ptn-rel pull-right margin-r-0">
-                        <img src="../../assets/images/coming-soon.png" class="ptn-abs coming-soon" alt="">
                         <img src="../../assets/images/top-9.png" alt="" class="">
                         <span>Sunset 501</span>
                     </span>
                     <span class="ptn-rel pull-left">
-                        <img src="../../assets/images/coming-soon.png" class="ptn-abs coming-soon" alt="">
                         <img src="../../assets/images/top-5.png" alt="" class="">
                         <span>Charleston 508</span>
                     </span>
@@ -60,31 +55,26 @@
 
         <div>
                     <span class="ptn-rel pull-left">
-                        <img src="../../assets/images/coming-soon.png" class="ptn-abs coming-soon" alt="">
                         <img src="../../assets/images/top-7.png" alt="" class="">
                         <span>Colonial 509</span>
                     </span>
                     <span class="pull-right margin-r-0 ptn-rel">
-                        <img src="../../assets/images/coming-soon.png" class="ptn-abs coming-soon" alt="">
                         <img src="../../assets/images/top-8.png" alt="" class="">
                         <span>Prarie 510</span>
                     </span>
         </div>
         <div>
                     <span class="pull-left margin-r-0 ptn-rel">
-                        <img src="../../assets/images/coming-soon.png" class="ptn-abs coming-soon" alt="">
                         <img src="../../assets/images/top-12.png" alt="" class="">
                         <span>Cathedral 607</span>
                     </span>
                     <span class="pull-right margin-r-0 ptn-rel">
-                        <img src="../../assets/images/coming-soon.png" class="ptn-abs coming-soon" alt="">
                         <img src="../../assets/images/top-10.png" alt="" class="">
                         <span>Sunset 503</span>
                     </span>
         </div>
         <div>
                     <span class="ptn-rel pull-left">
-                        <img src="../../assets/images/coming-soon.png" class="ptn-abs coming-soon" alt="">
                         <img src="../../assets/images/top-11.png" alt="" class="">
                         <span>Plain Long</span>
                     </span>
@@ -99,10 +89,10 @@
 
     <!-- Left and right controls -->
     <a class="left carousel-control" href="#topSectionCarousel" role="button" data-slide="prev">
-      <span class="helper"></span><img src="../../assets/images/ch-left-arrow.png" alt="" height="30">
+      <span class="helper"></span><img class="left-arrow"src="../../assets/images/ch-left-arrow.png" alt=""  >
     </a>
     <a class="right carousel-control" href="#topSectionCarousel" role="button" data-slide="next">
-      <span class="helper"></span><img src="../../assets/images/ch-right-arrow.png" alt="" height="30">
+      <span class="helper"></span><img class="right-arrow" src="../../assets/images/ch-right-arrow.png" alt=""  >
     </a>
   </div>
 </div>
