glass type page css has been added

--- a/src/app/glass-type/glass-type.component.html
+++ b/src/app/glass-type/glass-type.component.html
@@ -5,7 +5,7 @@
         <img src="../../assets/images/btnWinPlace4Rnumber1.png" alt="">
     </span>
     <span class="pull-right ptn-rel" id="glass-select">
-        <img src="../../assets/images/select.png" class="ptn-abs lock-select" alt="" style="display: none">
+        <img src="../../assets/images/select.png" class="ptn-abs lock-select display-none" alt=""  >
         <img src="../../assets/images/btnWinPlace4Rnumber2.png" alt="">
     </span>
 
@@ -23,13 +23,11 @@
               <img src="../../assets/images/btnGLAZ-S.png" alt="">
               <span class="clearfix inline-block">SSB Clear Glass (Non-Insulated)</span>
           </span>
-          <span class="ptn-rel">
-              <img src="../../assets/images/coming-soon.png" class="ptn-abs coming-soon" alt="">
+          <span class="ptn-rel"> 
               <img src="../../assets/images/btnGLAZ-S.png" alt="">
               DSB Strength Clear Glass(Non-Insulated)
           </span>
-          <span class="ptn-rel">
-              <img src="../../assets/images/coming-soon.png" class="ptn-abs coming-soon" alt="">
+          <span class="ptn-rel"> 
               <img src="../../assets/images/btnGLAZ-A.png" alt="">
               Acrylic (Non-Insulated)
           </span>
