--- a/src/main.less
+++ b/src/main.less
@@ -103,12 +103,10 @@ img {
     border-radius: 3px;
     box-shadow: 0 0 5px #ccc;
 }
-
 // margins
 .margin-b-15 {
     margin-bottom: 15px;
 }
-
 .margin-b-10 {
     margin-bottom: 10px;
 }
@@ -331,4 +329,7 @@ li {
 }
 .top-selectable-img {
 	height: 35px;
+}
+.display-none{
+    display: none;
 }
