added lock page classes-few

--- a/src/main.less
+++ b/src/main.less
@@ -17,6 +17,9 @@
 .padding-left(@val:0) {
     padding-left: @val;
 }
+.text-orange {
+	color: @color_1 !important;
+}
 
 .pad-l-0 {
     padding-left: 0;
@@ -332,4 +335,9 @@ li {
 }
 .display-none{
     display: none;
+}
+@color_1: #f96302;
+
+.text-orange {
+	color: @color_1 !important;
 }
