install classes has been added

--- a/src/app/install/install.component.html
+++ b/src/app/install/install.component.html
@@ -63,7 +63,7 @@
     <dd class="diy-install-table-header">
       Top Section
     </dd>
-    <dd><span class="top-section-txt">Solid Short Elegant</span></dd>
+    <dd><span>Solid Short Elegant</span></dd>
     <dd>Placement : 4th Row (TOP)</dd>
   </dl>
   <dl class="diy-install-table">
