added opener css

--- a/src/main.less
+++ b/src/main.less
@@ -237,6 +237,16 @@ li {
     width: 96%;
     display: inline-block;
 }
+.home .carousel-inner {
+  height: 155px;
+}
+
+.home .carousel-inner > .item > img,
+.home .carousel-inner > .item > a > img {
+  width: 70%;
+  margin: auto;
+}
+
 .carousel {
     position: relative;
 }
@@ -336,8 +346,4 @@ li {
 .display-none{
     display: none;
 }
-@color_1: #f96302;
-
-.text-orange {
-	color: @color_1 !important;
-}
+ 
