--- a/src/app/opener/opener.component.html
+++ b/src/app/opener/opener.component.html
@@ -1,36 +1,33 @@
-<div class="opener-screen">
-  <h4 class="text-orange">Choose Your Opener</h4>
-  <div class="tile margin-b-15 ptn-rel">
-    <div id="openerCarousel" class="carousel slide padding10 opener-carousel carousel1" data-ride="carousel">
+<div class="">
+    <h4 class="text-orange">Choose Your Opener</h4>
+    <div class="tile margin-b-15 ptn-rel">
+        <div id="openerCarousel" class="carousel slide padding10 opener-carousel carousel1" data-ride="carousel">
+            <!-- Wrapper for slides -->
+            <div role="listbox" class="carousel-inner">
+                <div class="item active">
+                    <span class="ptn-rel">
+                        <img src="../../assets/images/select.png" class="ptn-abs select" alt="">
+                        <img src="../../assets/images/btn8550WMobile.png" alt="">
+                    </span>
+                    <span class="ptn-rel pull-right">
+                        <img src="../../assets/images/btnHD950WFMobile.png" alt="">
+                    </span>
+                </div>
+                <div class="item">
+                    <span class="ptn-rel margin-l-10">
+                        <img src="../../assets/images/btnHD420EVMobile.png" alt="">
+                    </span>
+                </div>
+            </div>
 
-      <!-- Wrapper for slides -->
-      <div role="listbox" class="carousel-inner">
-        <div class="item active">
-                            <span class="ptn-rel">
-                                <img src="../../assets/images/select.png" class="ptn-abs select" alt="">
-                                <img src="../../assets/images/btn8550WMobile.png" alt="">
-                            </span>
-                            <span class="ptn-rel pull-right">
-                                <img src="../../assets/images/coming-soon.png" class="ptn-abs coming-soon" alt="">
-                                <img src="../../assets/images/btnHD950WFMobile.png" alt="">
-                            </span>
+            <!-- Left and right controls -->
+            <a class="left carousel-control" href="#openerCarousel" role="button" data-slide="prev">
+                <span class="helper"></span><img class="left-arrow" src="../../assets/images/ch-left-arrow.png" alt="" height="30">
+            </a>
+            <a class="right carousel-control" href="#openerCarousel" role="button" data-slide="next">
+                <span class="helper"></span><img class="right-arrow" src="../../assets/images/ch-right-arrow.png" alt="" height="30">
+            </a>
         </div>
-        <div class="item">
-                            <span class="ptn-rel margin-l-10">
-                                <img src="../../assets/images/coming-soon.png" class="ptn-abs coming-soon" alt="">
-                                <img src="../../assets/images/btnHD420EVMobile.png" alt="">
-                            </span>
-        </div>
-      </div>
 
-      <!-- Left and right controls -->
-      <a class="left carousel-control" href="#openerCarousel" role="button" data-slide="prev">
-        <span class="helper"></span><img src="../../assets/images/ch-left-arrow.png" alt="" height="30">
-      </a>
-      <a class="right carousel-control" href="#openerCarousel" role="button" data-slide="next">
-        <span class="helper"></span><img src="../../assets/images/ch-right-arrow.png" alt="" height="30">
-      </a>
     </div>
-
-  </div>
 </div>
