added opener selected classes

--- a/src/app/opener-selected/opener-selected.component.html
+++ b/src/app/opener-selected/opener-selected.component.html
@@ -7,11 +7,11 @@
     3-Button Remote 
     <p class="margin-b-0">
         <span class="pull-right" data-id="price-39.95">
-                <img src="../../assets/images/substract.png" class="substract-accessory" alt="">
+                <img src="../../assets/images/substract.png"  alt="">
             <span class="accessory-quantity">0</span>
-            <img src="../../assets/images/add.png" class="add-accessory" alt="">
+            <img src="../../assets/images/add.png"   alt="">
         </span>
-      + <span class="text-orange accessory-price">$<span>39.95</span> Each</span>
+      + <span class="text-orange">$<span>39.95</span> Each</span>
     </p>
   </div>
 </div>
