added font size for page header

--- a/src/app/glass-type/glass-type.component.html
+++ b/src/app/glass-type/glass-type.component.html
@@ -1,4 +1,4 @@
-<h4 class="text-orange">Choose Your Glass Type</h4>
+<h4 class="text-orange font-size-16">Choose Your Glass Type</h4>
 <div class="window-location ">
     <span class="ptn-rel">
         <img src="../../assets/images/select.png" class="ptn-abs lock-select" alt="">
