--- a/src/app/lock/lock.component.html
+++ b/src/app/lock/lock.component.html
@@ -1,4 +1,4 @@
-<h4 class="text-orange">Choose Your Lock</h4>
+<h4 class="text-orange font-size-16">Choose Your Lock</h4>
 
 <div class="tile margin-b-15 ptn-rel">
   <img src="../../assets/images/select.png" class="ptn-abs lock-select" alt="">
