--- a/src/app/opener/opener.component.html
+++ b/src/app/opener/opener.component.html
@@ -1,5 +1,5 @@
 <div class="">
-    <h4 class="text-orange">Choose Your Opener</h4>
+    <h4 class="text-orange font-size-16">Choose Your Opener</h4>
     <div class="tile margin-b-15 ptn-rel">
         <div id="openerCarousel" class="carousel slide padding10 opener-carousel carousel1" data-ride="carousel">
             <!-- Wrapper for slides -->
