added font size to page header

--- a/src/app/opener-selected/opener-selected.component.html
+++ b/src/app/opener-selected/opener-selected.component.html
@@ -1,8 +1,8 @@
 <div class="opener-accessories">
-  <h4 class="text-orange">The Opener You Selected</h4>
+  <h4 class="text-orange font-size-16">The Opener You Selected</h4>
   <p class="lead margin-b-10">Elite Series 8550W 12v DC Motor with Integrated Battery Backup, Belt Drive, and MyQ with
     7' Rail</p>
-  <h4 class="text-orange">Choose Opener Accessories</h4>
+  <h4 class="text-orange font-size-16">Choose Opener Accessories</h4>
   <div class="accessory-sec margin-b-10">
     3-Button Remote 
     <p class="margin-b-0">
