added additionalOptions css classes

--- a/src/app/additional-options/additional-options.component.html
+++ b/src/app/additional-options/additional-options.component.html
@@ -1,5 +1,5 @@
 <div class="row fixed-header">
-  <h4>Additional Options</h4>
+  <h4 class="font-size-16">Additional Options</h4>
 </div>
 <div class="content additional-options">
   <dl>
