--- a/src/app/additional-options/additional-options.component.html
+++ b/src/app/additional-options/additional-options.component.html
@@ -1,6 +1,7 @@
 <div class="row fixed-header">
   <h4 class="font-size-16">Additional Options</h4>
 </div>
+<h4 class="text-orange font-size-16">Additional Options</h4>
 <div class="content additional-options">
   <dl>
     <dd>
