--- a/src/app/additional-options/additional-options.component.less
+++ b/src/app/additional-options/additional-options.component.less
@@ -54,6 +54,17 @@
 }
 @background_color_1: #fff;
 @background_color_2: #f96302;
+@color_1: #f96302;
+
+.fixed-header {
+	h4 {
+		padding: 0px 15px;
+		color: @color_1;
+	}
+	.align-right {
+		padding: 0px 15px;
+	}
+}
 
 .slider {
 	position: absolute;
