added css clasess

--- a/src/app/additional-options/additional-options.component.html
+++ b/src/app/additional-options/additional-options.component.html
@@ -1,7 +1,5 @@
-<div class="row fixed-header">
-  <h4 class="font-size-16">Additional Options</h4>
-</div>
-<div class="content additional-options">
+ <h4 class="font-size-16 text-orange">Additional Options</h4>
+ <div class="content additional-options">
   <dl>
     <dd>
       <p>Medallion Hardware Upgrade for <span class="text-orange">$59.00</span>?</p>
