--- a/src/app/additional-options/additional-options.component.html
+++ b/src/app/additional-options/additional-options.component.html
@@ -1,4 +1,7 @@
-  <h4 class="font-size-16 text-orange">Additional Options</h4>
+<h4 class="text-orange font-size-16">Additional Options</h4>
+<div class="content additional-options">
+    <dl>
+        <dd>
      <p>Medallion Hardware Upgrade for <span class="text-orange">$59.00</span>?</p>
       <div id="upgrade">
         <img src="../../assets/images/medallionlogo.png">
