--- a/src/app/home/home.component.html
+++ b/src/app/home/home.component.html
@@ -61,8 +61,8 @@
     </span>
     <span class="ptn-rel">
         <input type="radio" name="camera" id="camera-r3">
-        <label for="camera-r3" class="ptn-abs">
-            <img src="../../assets/images/gallery-block.png">
+        <label for="camera-r3" class="ptn-abs ptn-rel">
+            <img src="../../assets/images/gallery-block.png" alt=""/>
             <input type="file" class="ptn-abs gallery" accept="image/*">
             <span>Gallery</span>
         </label>
