--- a/src/app/home/home.component.less
+++ b/src/app/home/home.component.less
@@ -124,9 +124,21 @@
   }
 }
 
+.camera-section-selection {
+	margin-top: 30px;
+}
+.space-around {
+	justify-content: space-around;
+	display: flex;
+}
+.space-between {
+	display: flex;
+}
+
 .stock-row {
   input[type=radio] {
     position: absolute;
     visibility: hidden;
   }
 }
+
