--- a/src/app/details/details.component.html
+++ b/src/app/details/details.component.html
@@ -24,11 +24,11 @@
   <modal-header [show-close]="true">
   </modal-header>
   <modal-body>
-      <h4 class="color-black font-size-16 bold"> Professionally Installed Vs. Do-lt-Yourself </h4>
+      <h4 class="color-black font-size-16"> Professionally Installed Vs. Do-lt-Yourself </h4>
    
     <p class="font-size-12 padding-b-10"> Clopay Building Products and The Home Depot always recommend that you have your new
         garage door professionally installed. 
-        <span  >(required on Canyon Ridge. Avante. & Reserve Collection doors)</span>
+        <span style="color:#808080 !important;">(required on Canyon Ridge. Avante. & Reserve Collection doors)</span>
     </p>
     <p class="font-size-12 padding-b-10">
       It's important to consuder the followung factors when decading on your installation options.
