Added behr color popup and classes

--- a/src/app/color/color.component.less
+++ b/src/app/color/color.component.less
@@ -109,12 +109,43 @@
     background-color: #064e3b;
 }
 .helper {
-	height: 100%;
-	vertical-align: middle;
+    height: 100%;
+    vertical-align: middle;
 }
 .left-arrow {
-	height: 30px;
+    height: 30px;
 }
 .right-arrow {
-	height: 30px;
+    height: 30px;
 }
+.bher-color-sec {
+    .color-sec{            
+        border: 1px solid #5a5c5b;
+        width: 84px;
+        height: 84px;
+        display:inline-block;
+    }
+}
+.white {
+    background-color: rgb(241, 241, 241);
+}
+.almond {
+    background-color: rgb(245, 240, 225);
+}
+.grey {
+    background-color: rgb(200, 200, 200);
+}
+.desertTan {
+    background-color: rgb(205, 200, 174);
+}
+.sandtone {
+    background-color: rgb(191, 178, 157);
+}
+.chocolate {
+    background-color: rgb(62, 55, 25)
+}
+.hunterGreen {
+    background-color: rgb(34, 65, 47);
+}
+
+
