--- a/src/app/color/color.component.html
+++ b/src/app/color/color.component.html
@@ -1,7 +1,12 @@
-<h4 class="font-size-16 text-orange">Choose Your Color</h4>
+<div class="row">
+    <div class="col-xs-9 pull-left" > <h4 class="font-size-16 text-orange">Choose Your Color</h4></div>
+    <div class="col-xs-3 pull-left">  
+        <img style="    margin-left: -20px;" src="../../assets/images/Behar-icon-small-2.png" alt=""/>
+        <img src="../../assets/images/Info-64.png" height="20" class="pull-right" (click)="behr.open()" alt="">
+    </div> 
+</div>
 <div class="tile margin-b-15 ptn-rel">
     <div id="colorCarousel" class="carousel slide padding10 color-carousel carousel1" data-ride="carousel">
-
         <!-- Wrapper for slides -->
         <div role="listbox" class="carousel-inner">
             <div class="item active">
@@ -36,7 +41,6 @@
                     </li>
                 </ul>
             </div>
-
             <div class="item">
                 <ul class="padding-0">
                     <li class="margin-left1-5">
@@ -51,7 +55,6 @@
                         <img src="../../assets/images/btnChocolate.png" alt="">
                         <p>Chocolate (Painted)</p>
                     </li>
-
                     <li class="margin-left1-5">
                         <img src="../../assets/images/btnmedium.png" alt="">
                         <p>Ultra-Grain Classic</p>
@@ -65,12 +68,8 @@
                         <p>ultra-Grain &reg; Classic Walnut Finish</p>
                     </li>
                 </ul>
-
             </div>
-
-
         </div>
-
         <!-- Left and right controls -->
         <a class="left carousel-control" href="#colorCarousel" role="button" data-slide="prev">
             <span class="helper"></span><img class="left-arrow" src="../../assets/images/ch-left-arrow.png" alt="" >
@@ -80,3 +79,53 @@
         </a>
     </div>
 </div>
+<modal #behr>
+    <modal-header [show-close]="true">
+    </modal-header>
+    <modal-body>
+        <div class="col-xs-12" >
+            <div class="col-xs-5">
+                <img src="../../assets/images/Behar-icon.png" alt=""/>
+            </div>
+            <div class="col-xs-7 font-size-16 bold  ">
+                <p>Paint Color Codes for  Clopay Garage Doors <p>
+            </div>
+        </div>
+        <div class="text-center font-size-12 padding-b-10">
+            <strong>The BEHR paint color codes below are exact matches to Clopay steel garage door color offerings. 
+                Take this color code to The Home Depot Paint Desk to get an exact paint match to paint your home’s 
+                exterior trim to match your Clopay garage door. </strong></div>
+        <div class="col-xs-12 bher-color-sec">
+            <div class="col-xs-6 text-center font-size-11">
+                <span class="color-sec white"></span>
+                <p>Clopay Color : White BEHR® Color Code:CBP-l</p>
+            </div> 
+            <div class="col-xs-6 text-center font-size-11">
+                <span class="color-sec almond"></span>
+                <p>Clopay Color : Almond BEHR® Color Code:CBP-2&nbsp;</p>
+            </div> 
+            <div class="col-xs-6 text-center font-size-11">
+                <span class="color-sec grey"></span>
+                <p>Clopay Color : Grey BEHR® Color Code:CBP-7</p>
+            </div> 
+            <div class="col-xs-6 text-center font-size-11">
+                <span class="color-sec desertTan"></span>
+                <p>Clopay Color : Desert Tan BEHR® Color Code:CBP-3</p>
+            </div> 
+            <div class="col-xs-6 text-center font-size-11">
+                <span class="color-sec sandtone"></span>
+                <p>Clopay Color : Sandtone BEHR® Color Code:CBP-4</p>
+            </div> 
+            <div class="col-xs-6 text-center font-size-11">
+                <span class="color-sec chocolate"></span>
+                <p>Clopay Color : Chocolate BEHR® Color Code:CBP-5 **&nbsp;</p>
+            </div> 
+            <div class="col-xs-6 text-center font-size-11">
+                <span class="color-sec hunterGreen"></span>
+                <p>Clopay Color : Hunter Green BEHR® Color Code:CBP-7</p>
+            </div> 
+        </div>
+        <div class="text-center font-size-12">
+   <p>* Color Available only on&nbsp;Clopay classic Collection<br>Premium Series Garage Doors</p></div>
+    </modal-body>
+</modal>
