message div change

--- a/src/app/collection/collection.component.html
+++ b/src/app/collection/collection.component.html
@@ -76,3 +76,6 @@
   <button class="btn btn-default text-uppercase btn-big box-shadow bold">TAP TO SEE QUICKSHIP DOORS</button>
 </div>
 <div class="clearfix margin-b-15 inline-block"></div>
+
+<div class="clearfix margin-b-15 inline-block"></div>
+<div class="clearfix margin-b-15 inline-block"></div>
