added classes for behr image

--- a/src/app/color/color.component.html
+++ b/src/app/color/color.component.html
@@ -1,8 +1,8 @@
 <div class="row">
     <div class="col-xs-9 pull-left" > <h4 class="font-size-16 text-orange">Choose Your Color</h4></div>
-    <div class="col-xs-3 pull-left">  
-        <img style="    margin-left: -20px;" src="../../assets/images/Behar-icon-small-2.png" alt=""/>
-        <img src="../../assets/images/Info-64.png" height="20" class="pull-right" (click)="behr.open()" alt="">
+    <div class="col-xs-3 pull-right behr-pad">  
+        <img  src="../../assets/images/Behar-icon-small-2.png" class="img-behr"  alt=""/>
+        <img src="../../assets/images/Info-64.png" height="26" class="pull-right" (click)="behr.open()" alt="">
     </div> 
 </div>
 <div class="tile margin-b-15 ptn-rel">
