--- a/src/app/color/color.component.less
+++ b/src/app/color/color.component.less
@@ -147,5 +147,12 @@
 .hunterGreen {
     background-color: rgb(34, 65, 47);
 }
+.behr-pad {
+   padding:0px;
+   padding-right: 5px;
+}
 
-
+.img-behr {
+    width: 50px;
+    
+}
