added nehr classes

--- a/src/main.less
+++ b/src/main.less
@@ -209,7 +209,9 @@ img {
 .font-size-12 {
     font-size: 12px !important;
 }
-
+.font-size-11 {
+    font-size: 11px !important;
+}
 li {
     list-style: none;
 }
@@ -354,3 +356,11 @@ li {
     display: none;
 }
 
+
+@media screen and (max-width: 735px) and (min-width: 414px) {
+    .img-behr{
+     width: 50px; 
+}
+}
+
+	 
